[package]
name = "xdcc-request"
description = "Requests XDCC files"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", default-features = false }
irc = { version = "1.1.0", default-features = false }
names = { version = "0.14.0", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
test-case = "3.3.1"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
